log

Tue 15 Aug 2023 12:50:23 AM UTC: 
 tests:  0|7
total_score: 0/70
5c85355
Tue 15 Aug 2023 05:58:54 AM UTC: 
 exercises.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
7c30f30
Tue 15 Aug 2023 07:05:55 AM UTC: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
cf14bb7
Wed 16 Aug 2023 02:20:23 AM UTC: 
 exercises.c | 13 ++++++-------
 1 file changed, 6 insertions(+), 7 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:34:16: error: expected ‘:’ before ‘;’ token
   34 |     temp?arr[i];
      |                ^
      |                :
Compilation failed
202a3a2
Wed 16 Aug 2023 02:20:30 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
79c0546
